// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with license issues 1`] = `
"

License issues (1 issue):

  ✗ [High] Unknown license
    [URL] in rack-cache@1.1
    introduced by:
    rack-cache@1.1
    Legal instructions:
    ○ for LGPL-3.0 license: I am legal license instruction

Issues to fix by upgrading (7 issues):

  Upgrade rack@1.6.5 to rack@1.6.11 to fix 1 issue

  ✗ [Medium] Cross-site Scripting (XSS)
    [URL] in rack@1.6.5
    introduced by:
    rack@1.6.5
    rack-cache@1.1 > rack@1.6.5
    rack-protection@1.5.3 > rack@1.6.5

  Upgrade rack-cache@1.1 to rack-cache@1.3.0 to fix 2 issues

  ✗ [Medium] Cross-site Scripting (XSS)
    [URL] in rack@1.6.5
    introduced by:
    rack@1.6.5
    rack-cache@1.1 > rack@1.6.5
    rack-protection@1.5.3 > rack@1.6.5

  ✗ [High] HTTP Header Caching Weakness
    [URL] in rack-cache@1.1
    introduced by:
    rack-cache@1.1

  Upgrade rack-protection@1.5.3 to rack-protection@2.0.0 to fix 4 issues

  ✗ [Low] Side-channel attack
    [URL] in rack-protection@1.5.3
    introduced by:
    rack-protection@1.5.3

  ✗ [Medium] Timing Attack
    [URL] in rack-protection@1.5.3
    introduced by:
    rack-protection@1.5.3

  ✗ [Medium] Directory Traversal
    [URL] in rack-protection@1.5.3
    introduced by:
    rack-protection@1.5.3

  ✗ [Medium] Cross-site Scripting (XSS)
    [URL] in rack@1.6.5
    introduced by:
    rack@1.6.5
    rack-cache@1.1 > rack@1.6.5
    rack-protection@1.5.3 > rack@1.6.5"
`;

exports[`with pins & unfixable & showVulnsPaths = all 1`] = `
"

Issues with no direct upgrade or patch (1 issue):

  ✗ [Low] Directory Traversal
    [URL] in django@1.6.1
    introduced by:
    django@1.6.1
    This issue was fixed in versions: 2.2.18, 3.0.12, 3.1.6

Issues to fix by upgrading dependencies (1 issue):

  Upgrade django@1.6.1 to django@2.2.18 to fix 1 issue

  ✗ [Medium] Content Spoofing
    [URL] in django@1.6.1
    introduced by:
    django@1.6.1"
`;

exports[`with showVulnPaths = some 1`] = `
"

Issues with no direct upgrade or patch (1 issue):

  ✗ [Low] Directory Traversal
    [URL] in django@1.6.1
    introduced by django@1.6.1
    This issue was fixed in versions: 2.2.18, 3.0.12, 3.1.6

Issues to fix by upgrading dependencies (1 issue):

  Upgrade django@1.6.1 to django@2.2.18 to fix 1 issue

  ✗ [Medium] Content Spoofing
    [URL] in django@1.6.1
    introduced by django@1.6.1"
`;

exports[`with upgrades & patches 1`] = `
"

Patchable issues (1 issue):

  Patch available for node-uuid@1.4.0

  ✗ [Low (originally Medium)] Insecure Randomness
    [URL] in node-uuid@1.4.0
    introduced by:
    node-uuid@1.4.0

Issues to fix by upgrading (3 issues):

  Upgrade qs@0.0.6 to qs@6.0.4 to fix 3 issues

  ✗ [Low (originally High)] Prototype Override Protection Bypass
    [URL] in qs@0.0.6
    introduced by:
    qs@0.0.6

  ✗ [Low (originally High)] Denial of Service (DoS)
    [URL] in qs@0.0.6
    introduced by:
    qs@0.0.6

  ✗ [Low (originally Medium)] Denial of Service (DoS)
    [URL] in qs@0.0.6
    introduced by:
    qs@0.0.6"
`;
